[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ih-trading-app"
version = "0.1.0"
description = "IH Trading APP - Rule based ORB trading system"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit",
    "pytz"
]

[tool.setuptools]
packages = ["engine", "config", "utils", "tests"]
